extended db entity swagger definition
